--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ ul {
     flex-direction: column;
     padding-top: 30px;
     padding-bottom: 30px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 250px;
+    margin-right: 250px;
+    position: relative;
 
 }
 
@@ -54,9 +55,6 @@ ul {
 }
 
 
-
-
-
 .footer .footer__list-2{
 
     padding-right: 50px;
@@ -79,5 +77,89 @@ ul {
     justify-content: space-between;
     gap: 110px;
     text-decoration: underline;
+
+}
+
+@media (max-width: 1024px) {
+    
+    .footer {
+        height: 400px;
+        width: 100%;
+        margin: 0;
+    }
+
+    .footer .footer__icon {
+        position: absolute;
+        top: 30px;
+        left: 20px;
+    }
+
+    .footer .footer__list-1, .footer__list-2 {
+        margin-top: 40px;
+        margin-left: 0;
+        padding-left: 20px;
+    }
+
+
+
+    .footer .footer__bottom-item-left{
+        display: flex;
+        flex-direction: column;
+        gap:0;
+    }
+
+    .footer .footer__bottom-side{
+        gap: 0;
+        
+    }
+
+    .footer .footer__bottom-item-left {
+        padding-left: 10px;
+    }
+
+    
+
+}
+
+
+@media (max-width: 480px){
+
+    .footer {
+        margin: 0;
+        padding: 0;
+    }
+
+    .footer .footer__top-side{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 0;
+        
+    }
+
+    .footer .footer__top-side .footer__list-1{
+        margin-top: 70px;
+    }
+    .footer .footer__top-side .footer__list-2{
+        margin-top: 25px;
+        margin-bottom: 0;
+
+    }
+
+    .footer__bottom-side{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .footer .footer__bottom-side .footer__bottom-item-left{
+        gap: 10px;
+    }
+
+    .footer .footer__bottom-side .footer__bottom-item-right{
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }
+
+
 
 }
